k8s/sabnzbd/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    name: sabnzbd
