k8s/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:5.0.4-ls263
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config
            - mountPath: /data
              name: sabnzbd-data
            - mountPath: /incomplete-downloads
              name: sabnzbd-incomplete
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /opt/sabnzbd/config
          name: sabnzbd-config
        - hostPath:
            path: /opt/media/data
          name: sabnzbd-data
        - hostPath:
            path: /opt/media/data/incomplete
          name: sabnzbd-incomplete
