k8s/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app: sabnzbd
    kubernetes.io/name: "sabnzbd"
spec:
  type: NodePort
  ports:
    - name: sabnzbd
      port: 8080
      targetPort: 8080
      nodePort: 30021
  selector:
    app: sabnzbd
