k8s/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: sabnzbd
spec:
  rules:
    - host: sabnzbd.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
